# Breakout

./: CMakeLists.txt  CurveEditor.ggb  README.md  shell.nix
Breakin/: CMakeLists.txt
Breakin/cmake/: Libraries.cmake
Breakin/src/: Camera.h  Core.cpp  Core.h  GameTime.cpp  GameTime.h  Locator.h  Main.cpp  MathExtensions.h  Node.cpp  Node.h  Renderer.cpp  Renderer.h  SceneGraph.cpp  SceneGraph.h  Singleton.h
Breakin/src/Core/: Core.cpp  Core.h  Main.cpp
Breakin/src/Engine/: Audio.cpp  Audio.h  GameTime.cpp  GameTime.h  Input.cpp  Input.h  Locator.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  SceneGraph.cpp  SceneGraph.h
Breakin/src/Engine/Resources/: Font.cpp  Font.h  Resources.cpp  Resources.h  Sound.cpp  Sound.h  Texture.cpp  Texture.h
Breakin/src/Helper/: Event.h  Locator.h  MathExtensions.h  MessageQueue.cpp  MessageQueue.h  Singleton.h
Breakin/src/Nodes/: BoxCollider.cpp  BoxCollider.h  Button.cpp  Button.h  Camera.cpp  Camera.h  Node.cpp  Node.h  Shaker.cpp  Shaker.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Trail.cpp  Trail.h
Breakin/src/Tween/: EaseFinction.cpp  EaseFinction.h  EaseFunction.cpp  EaseFunction.h  Tween.h  TweenEngine.cpp  TweenEngine.h  TweenInstance.cpp  TweenInstance.h
cmake/: Libraries.cmake
src/: Ball.cpp  Ball.h  Brick.cpp  Brick.h  Core.cpp  Core.h  Game.cpp  Game.h  GameEntry.cpp  GameState.cpp  GameState.h  GameStats.cpp  GameStats.h  GlobalSettings.cpp  GlobalSettings.h  HUD.cpp  HUD.h  MainMenu.cpp  MainMenu.h  MathExtensions.h  Paddle.cpp  Paddle.h  Physics.h  Playfield.cpp  Playfield.h  Prefabs.cpp  Prefabs.h  Scenes.cpp  Scenes.h  Trail.cpp  Trail.h  Wall.cpp  Wall.h  breakout.cpp  breakout.h  gametime.cpp  main.cpp  renderer.cpp  renderer.h  scenes.cpp  (+1 more)
src/Gameplay/: Ball.cpp  Ball.h  Breakout.cpp  Breakout.h  Brick.cpp  Brick.h  Paddle.cpp  Paddle.h  Playfield.cpp  Playfield.h  Wall.cpp  Wall.h
src/UI/: HUD.cpp  HUD.h  MainMenu.cpp  MainMenu.h  PauseMenu.cpp  PauseMenu.h  ScoreScreen.cpp  ScoreScreen.h
